Issue-122 : No validation of chained certificates to access the FT HTTP content server    - The org.apache.http classes and the AndroidHttpClient class have been deprecated in Android 5.1.      These classes are no longer maintained and then replaced by HttpUrlConnection.      The management of the certificate validation for HTTPs is managed by the Android system.      If self-signed certificate is used by the HTTP file content server, it must be installed manually.    - Remove references to http apache library for the HTTP provisioning    - Use IllegalArgumentException instead of a SIP exception in HttpDigestMd5Authentication class    - Change IllegalStateException to FileNotDownloadedException in HttpDownloadManager class